Fix chapter play button overflow

--- a/src/style.scss
+++ b/src/style.scss
@@ -979,6 +979,10 @@ button,
     &.selected~div {
         opacity: 0.25;
     }
+
+    foreignObject {
+        overflow: visible;
+    }
 }
 
 .modal {
